--- a/common/pom.xml
+++ b/common/pom.xml
@@ -4,7 +4,7 @@
     <parent>
         <groupId>org.opencds.cqf</groupId>
         <artifactId>parent</artifactId>
-        <version>0.4.1-SNAPSHOT</version>
+        <version>0.4.1</version>
     </parent>
 
     <groupId>org.opencds.cqf</groupId>
