--- a/dstu3/pom.xml
+++ b/dstu3/pom.xml
@@ -5,7 +5,7 @@
   <parent>
     <groupId>org.opencds.cqf</groupId>
     <artifactId>parent</artifactId>
-    <version>0.4.1-SNAPSHOT</version>
+    <version>0.4.1</version>
   </parent>
 
   <groupId>org.opencds.cqf</groupId>
