--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>org.opencds.cqf</groupId>
     <artifactId>parent</artifactId>
-    <version>0.4.1-SNAPSHOT</version>
+    <version>0.4.1</version>
     <packaging>pom</packaging>
 
     <modules>
@@ -52,9 +52,9 @@
         <fhir.core.version>5.4.5</fhir.core.version>
         <cqf-tooling.version>1.3.0</cqf-tooling.version>
         <cql-engine.version>1.5.1</cql-engine.version>
-        <cql-evaluator.version>1.2.1-SNAPSHOT</cql-evaluator.version>
+        <cql-evaluator.version>1.2.0</cql-evaluator.version>
         <cqframework.version>1.5.3</cqframework.version>
-        <cds-hooks.version>1.3.1-SNAPSHOT</cds-hooks.version>
+        <cds-hooks.version>1.3.0</cds-hooks.version>
         <slf4j.version>1.7.30</slf4j.version>
         
     </properties>
